// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RowLabel > should render the props label 1`] = `
<span
  class="tc-column-chooser-row-label _tc-column-chooser-row-label_27b2cf"
>
  Hello world
</span>
`;

exports[`RowLabel should render the props label 1`] = `
<span
  class="tc-column-chooser-row-label theme-tc-column-chooser-row-label"
>
  Hello world
</span>
`;
